--- a/project/modules/log-boot/src/main/resources/static/views/logs-search.html
+++ b/project/modules/log-boot/src/main/resources/static/views/logs-search.html
@@ -10,6 +10,8 @@
     <title> logs search 日志搜索</title>
     <link href="../res/vendor/css/bootstrap-3.3.7.css" rel="stylesheet">
     <link href="../res/styles/css/bootstrap-table.css" rel="stylesheet">
+    <link href="../res/styles/css/bootstrap-datetimepicker.css" rel="stylesheet">
+
     <link href="../res/styles/general.css" rel="stylesheet">
     <link href="../res/styles/layout.css" rel="stylesheet">
     <link href="../res/styles/modal.css" rel="stylesheet">
@@ -46,7 +48,7 @@
 <div class="container">
 
     <!--搜索框-->
-    <div >
+    <div>
         <div class="row">
             <div class="col-sm-7">
 
@@ -90,7 +92,7 @@
     <div id="search">
         <button type="button" class="close">×</button>
         <form>
-            <input type="search" value="" placeholder="type keyword(s) here" />
+            <input type="search" value="" placeholder="type keyword(s) here"/>
             <button type="submit" class="btn btn-primary">Search</button>
         </form>
     </div>
@@ -128,6 +130,9 @@
 <script src="../res/scripts/js/tether-1.3.2.min.js"></script>
 <script src="../res/vendor/js/bootstrap-3.3.7.js"></script>
 <script src="../res/scripts/js/bootstrap-table.js"></script>
+<script src="../res/scripts/js/bootstrap-datetimepicker.js"></script>
+<script src="../res/scripts/js/locales/bootstrap-datetimepicker.zh-CN.js"></script>
+
 <script src="../res/scripts/general.js"></script>
 <script src="../res/scripts/modal.js"></script>
 
@@ -135,6 +140,26 @@
 <!--<script src="scripts/js/bootstrap-3.3.7.min.js"></script>-->
 <script>
 
+    $(function () {
+        $('a[href="#search"]').on('click', function (event) {
+            event.preventDefault();
+            $('#search').addClass('open');
+            $('#search > form > input[type="search"]').focus();
+        });
+
+        $('#search, #search button.close').on('click keyup', function (event) {
+            if (event.target == this || event.target.className == 'close' || event.keyCode == 27) {
+                $(this).removeClass('open');
+            }
+        });
+
+
+        //Do not include! This prevents the form from submitting for DEMO purposes only!
+        $('form').submit(function (event) {
+            event.preventDefault();
+            return false;
+        })
+    });
 
     var searchListData = [{
         "name": "bootstrap-table",
@@ -189,7 +214,6 @@
         });
 
     });
-
 
 
 </script>
