--- a/project/modules/log-boot/src/main/resources/static/views/logs-stats.html
+++ b/project/modules/log-boot/src/main/resources/static/views/logs-stats.html
@@ -10,6 +10,7 @@
     <title> logs stats 日志统计</title>
     <link href="../res/vendor/css/bootstrap-3.3.7.css" rel="stylesheet">
     <link href="../res/styles/css/nv.d3.css" rel="stylesheet">
+    <link href="../res/styles/css/bootstrap-datetimepicker.css" rel="stylesheet">
     <link href="../res/styles/layout.css" rel="stylesheet">
     <link href="../res/styles/general.css" rel="stylesheet">
     <link href="../res/styles/bscard.css" rel="stylesheet">
@@ -157,6 +158,9 @@
 <script src="../res/scripts/js/d3-3.5.17.js"></script>
 <script src="../res/scripts/js/nv.d3.js"></script>
 <script src="../res/scripts/logsstats.js"></script>
+<script src="../res/scripts/js/bootstrap-datetimepicker.js"></script>
+<script src="../res/scripts/js/locales/bootstrap-datetimepicker.zh-CN.js"></script>
+
 <!--<script src="../res/scripts/js/d3-4.2.1.js"></script>-->
 <!--<script src="scripts/js/jquery-3.1.0.min.js"></script>-->
 <!--<script src="scripts/js/bootstrap-3.3.7.min.js"></script>-->
