--- a/project/modules/log-boot/src/main/resources/static/views/logs-stats.html
+++ b/project/modules/log-boot/src/main/resources/static/views/logs-stats.html
@@ -30,7 +30,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">日志监控与统计</a>
+            <a class="navbar-brand" href="#">日志统计</a>
         </div>
 
     </div>
