[replace] logs monitor

--- a/project/modules/log-boot/src/main/resources/static/views/logs-monitor.html
+++ b/project/modules/log-boot/src/main/resources/static/views/logs-monitor.html
@@ -57,8 +57,8 @@
         <div class="col-sm-3">
 
             <div id="optionsCard" class="card blank_divider360 _padding_left_5 _padding_top_15">
-                <div class="checkbox checkbox-circle">
-                    <input id="checkbox1" type="checkbox">
+                <div class="checkbox checkbox-info checkbox-circle">
+                    <input id="checkbox1" type="checkbox" checked="">
                     <label for="checkbox1">
                         应用1
                     </label>
@@ -69,8 +69,8 @@
                         应用2
                     </label>
                 </div>
-                <div class="checkbox checkbox-circle">
-                    <input id="checkbox3" type="checkbox">
+                <div class="checkbox checkbox-info checkbox-circle">
+                    <input id="checkbox3" type="checkbox" checked="">
                     <label for="checkbox3">
                         应用3
                     </label>
