[add] redis to socket

--- a/project/modules/log-boot/src/main/resources/static/views/logs-monitor.html
+++ b/project/modules/log-boot/src/main/resources/static/views/logs-monitor.html
@@ -76,7 +76,7 @@
                     </label>
                 </div>
                 <div class="checkbox checkbox-info checkbox-circle">
-                    <input id="checkbox4" type="checkbox" checked="">
+                    <input id="checkbox4" type="checkbox" checkeKd="">
                     <label for="checkbox4">
                         应用4
                     </label>
