[remove] elasticsearch js

--- a/project/modules/log-boot/src/main/resources/static/views/logs-search.html
+++ b/project/modules/log-boot/src/main/resources/static/views/logs-search.html
@@ -131,7 +131,7 @@
 <script src="../res/scripts/js/bootstrap-table.js"></script>
 <script src="../res/scripts/js/bootstrap-datetimepicker.js"></script>
 <script src="../res/scripts/js/locales/bootstrap-datetimepicker.zh-CN.js"></script>
-<script src="../res/scripts/js/elasticsearch.jquery.js"></script>
+<!--<script src="../res/scripts/js/elasticsearch.jquery.js"></script>-->
 <script src="../res/scripts/general.js"></script>
 <!--<script src="../res/scripts/modal.js"></script>-->
 
