[add]  ajax pie chart

--- a/project/modules/log-boot/src/main/resources/static/views/log-apps.html
+++ b/project/modules/log-boot/src/main/resources/static/views/log-apps.html
@@ -296,7 +296,7 @@
         var vAppDesc = $("#aAppDesc").val();
         var vAppPlatform = $("#aAppPlatform").val();
         var vAppNotes = $("#aAppNotes").val();
-        var appItem = '{"appCode":"' + vAppCode + '","appDesc":"' + vAppDesc + '","appIp":"' + vAppIp + '","appName":"' + vAppName + '","appNotes":"' + vAppNotes + '","appPlatform":"' + vAppPlatform + '","laId": "' + vAppCode + '"}';
+        var appItem = '{"appCode":"' + vAppCode + '","appDesc":"' + vAppDesc + '","appIp":"appid' + vAppIp + '","appName":"' + vAppName + '","appNotes":"' + vAppNotes + '","appPlatform":"' + vAppPlatform + '","laId": "' + vAppCode + '"}';
         console.log(appItem);
         $.ajax({
             url: LOGBASE_HOST_ENDPOINT + "/logb/apps/add",
